# Expense-tracker-axum

./: .env  Cargo.toml
migrations/: 20260312090432_users.up.sql  20260312090448_category.down.sql  20260312090448_category.up.sql  20260312090457_budget.down.sql  20260312090457_budget.up.sql  20260312090512_expense.down.sql  20260312090512_expense.up.sql
src/: error.rs  main.rs  middleware.rs
src/config/: mod.rs
src/database/: auth.rs  budget.rs  category.rs  expense.rs  mod.rs  user.rs
src/dtos/: auth.rs  budget.rs  category.rs  expense.rs  mod.rs  user.rs
src/handler/: auth.rs  budget.rs  category.rs  expense.rs  mod.rs  user.rs
src/models/: budget.rs  category.rs  expense.rs  mod.rs  user.rs
src/routes/: auth.rs  budget.rs  category.rs  expense.rs  mod.rs  user.rs
src/utils/: password.rs  token.rs
